# pal-mcp-server

./: .gitignore  CHANGES-FORK.md  CLAUDE.md  DONE.md  README.en.md  README.md  pyproject.toml
Obsidian-Pal_MCP/: Home.md  agy-print-swallows-model.md  antigravity-quota-split.md  clink-per-call-model-effort.md  clink-zero-setup-discovery.md  pal-two-installs-and-config-cache.md  ยินดีต้อนรับ.md
Obsidian-Pal_MCP/.obsidian/: workspace.json
clink/: constants.py  discovery.py  registry.py
clink/agents/: __init__.py  antigravity.py  base.py  claude.py  codex.py
clink/parsers/: __init__.py  antigravity.py
conf/cli_clients/: antigravity.json  claude-9arm.json  claude-9arm.json.example
docs/: OPEN-WORK-LEDGER.md  clink-model-effort-guide.md
docs/adr/: 0001-antigravity-via-windows-conpty.md  0002-per-call-model-effort-per-backend.md  0003-zero-setup-discovery-and-active-claude-9arm.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md  workflow.md
docs/reports/: 2026-07-16-clink-antigravity-model-override-investigation.md  2026-07-16-pal-clink-architecture-hardening-review.md  README.md
docs/tools/: clink.md
tests/: test_clink_discovery.py  test_clink_model_effort.py
tools/: clink.py
